added basic calendar

--- a/index.html
+++ b/index.html
@@ -99,11 +99,37 @@
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
+                                <i class="fa fa-calendar-o fa-3x"></i>
                             </div>
                         </div>
                         <div class="calendaritem">
                             <h1>1</h1>
+                        </div>
+
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-calendar-o fa-3x"></i>
+                            </div>
+                        </div>
+                        <div class="calendaritem">
+                            <h1>2</h1>
+                        </div>
+
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-calendar-o fa-3x"></i>
+                            </div>
+                        </div>
+                        <div class="calendaritem">
+                            <h1>3</h1>
                         </div>
 
                     </a>
