added first Contributions of day 3

--- a/index.html
+++ b/index.html
@@ -139,15 +139,6 @@
                             <div class="calendaritem inactivday">
                                 <h1>4</h1>
                             </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <div class="portfolio-link" >
-                        <div class="calendaritem inactivday">
-                            <h1>4</h1>
-                        </div>
-                        </a>
                     </div>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -155,7 +146,7 @@
                         <div class="calendaritem inactivday">
                             <h1>5</h1>
                         </div>
-                        </a>
+
                     </div>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -163,7 +154,6 @@
                         <div class="calendaritem inactivday">
                             <h1>6</h1>
                         </div>
-                        </a>
                     </div>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -171,7 +161,6 @@
                         <div class="calendaritem inactivday">
                             <h1>7</h1>
                         </div>
-                        </a>
                     </div>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -179,7 +168,6 @@
                         <div class="calendaritem inactivday">
                             <h1>8</h1>
                         </div>
-                        </a>
                     </div>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -187,7 +175,6 @@
                         <div class="calendaritem inactivday">
                             <h1>9</h1>
                         </div>
-                        </a>
                     </div>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -195,7 +182,6 @@
                         <div class="calendaritem inactivday">
                             <h1>10</h1>
                         </div>
-                        </a>
                     </div>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -203,7 +189,6 @@
                         <div class="calendaritem inactivday">
                             <h1>12</h1>
                         </div>
-                        </a>
                     </div>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -211,7 +196,6 @@
                         <div class="calendaritem inactivday">
                             <h1>13</h1>
                         </div>
-                        </a>
                     </div>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -219,7 +203,6 @@
                         <div class="calendaritem inactivday">
                             <h1>14</h1>
                         </div>
-                        </a>
                     </div>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -227,7 +210,6 @@
                         <div class="calendaritem inactivday">
                             <h1>15</h1>
                         </div>
-                        </a>
                     </div>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -235,7 +217,6 @@
                         <div class="calendaritem inactivday">
                             <h1>16</h1>
                         </div>
-                        </a>
                     </div>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -243,7 +224,6 @@
                         <div class="calendaritem inactivday">
                             <h1>17</h1>
                         </div>
-                        </a>
                     </div>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -251,7 +231,6 @@
                         <div class="calendaritem inactivday">
                             <h1>18</h1>
                         </div>
-                        </a>
                     </div>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -259,7 +238,6 @@
                         <div class="calendaritem inactivday">
                             <h1>19</h1>
                         </div>
-                        </a>
                     </div>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -267,7 +245,6 @@
                         <div class="calendaritem inactivday">
                             <h1>20</h1>
                         </div>
-                        </a>
                     </div>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -275,7 +252,6 @@
                         <div class="calendaritem inactivday">
                             <h1>21</h1>
                         </div>
-                        </a>
                     </div>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -283,7 +259,6 @@
                         <div class="calendaritem inactivday">
                             <h1>22</h1>
                         </div>
-                        </a>
                     </div>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -291,7 +266,6 @@
                         <div class="calendaritem inactivday">
                             <h1>23</h1>
                         </div>
-                        </a>
                     </div>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -299,7 +273,6 @@
                         <div class="calendaritem inactivday">
                             <h1>24</h1>
                         </div>
-                        </a>
                     </div>
                 </div>
         </div>
@@ -755,7 +728,11 @@
                         <div class="modal-body">
                             <h2>Tag 3: </h2>
                             <hr class="star-primary">
-                            <p>noch keine Contributions</p>
+                            <h3><a href="https://www.puzzle.ch/de/blog/articles/author/psimon">Pascal Simon</a>:</h3>
+                            <p>diverse Issue für Cryptopus erfasst. Zusätzlicher Commit.&nbsp;<a href="https://github.com/puzzle/cryptopus">https://github.com/puzzle/cryptopus</a></p>
+                            <h3><a href="https://www.puzzle.ch/de/blog/articles/author/tphilipona">Thomas Philipona</a>:</h3>
+                            <p>Die neue Open Source Advents Challenge Diary Seite wurde erstellt und unter: <a href="https://github.com/puzzle/opensource-advent-challenge-2015">https://github.com/puzzle/opensource-advent-challenge-2015</a> veröffentlicht. Neu werden unsere Contributions direkt hier dokumentiert. </p>
+
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
